--- a/Project2/package.json
+++ b/Project2/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "artillery": "^1.6.0-2",
     "body-parser": "^1.17.2",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mysql": "^2.13.0"
+    "mysql": "^2.13.0",
+    "redis": "^2.7.1"
   }
 }
